add: submitted page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,6 +21,7 @@
             <a class="nav-link" href="/">Best Selling Products</a>
             <a class="nav-link" href="/least">Least Selling Products</a>
             <a class="nav-link" href="/summary">Data Visualization</a>
+            <a class="nav-link" href="/submitted">Submitted By</a>
         </div>
     </nav>
 
